# mediaprobe-data-2025-001

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: preprocessing_configs.yaml
dbt_run/: dbt_project.yml
dbt_run/models/: sources.yml
dbt_run/models/curated/: ads_us.sql  ads_us_emotions.sql  ads_us_full.sql  master_ads.sql  master_ads_11272025.sql  reciprocal_ads.sql  reciprocal_ads_11272025.sql  schema.yml
dbt_run/models/export/: export_ads_us.sql  export_ads_us_emotions.sql  export_ads_us_full.sql  export_master_ads.sql  export_master_ads_11272025.sql  export_reciprocal_ads.sql  export_reciprocal_ads_11272025.sql  export_transcript_data.sql  schema.yml
dbt_run/models/feature/: ads_expanded.sql  ads_expanded_11272025.sql  liwc_emotions.sql  liwc_features.sql  program_metadata.sql  program_metadata_11272025.sql  schema.yml  vw_liwc_modeling.sql  vw_program_ranked.sql  vw_program_ranked_11272025.sql
scripts/migration/: ads_metadata.sql  ads_metadata_11272025.sql  schema.sql  sesson_metadata.sql  timeline_metadata.sql  timeline_metadata_11272025.sql
scripts/notebook/: galvanic_II.Rmd  galvanic_liwc.Rmd  galvanic_voice.Rmd  icoria_2026.Rmd  jar_modeling.rmd
src/: global_configs.py
src/models/: ollama_client.py  roberta_emotion.py
src/preprocessing/: emotion_classifier.py  staging_load.py
src/schemas/: __init__.py  source_data.py
src/utils/: duckdb_utils.py
